--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: python
 python:
-- '2.7'
-- '3.2'
+#- '2.7'
+#- '3.2'
 - '3.3'
-- '3.4'
-- pypy
-- pypy3
+#- '3.4'
+#- pypy
+#- pypy3
 before_install:
 - sudo apt-get update -qq
 - "export DISPLAY=:99.0"
